--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,122 @@
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Raleway&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 html, body {
-    height: 100%;
+    height: 100vh;
 }
 
 body {
     color: white;
     background: rgb(82,29,45);
     background: linear-gradient(180deg, rgba(82,29,45,1) 0%, rgba(60,6,22,1) 100%);
+    font-family: var(--font-text);
+}
+
+:root {
+    --font-name: Architects Daughter, sans-serif;
+    --font-text: Raleway, sans-serif;
+}
+
+.profile {
+    margin-top: 20px;
+    text-align: center;
 }
 
 .avatar {
     width: 200px;
     border-radius: 100%;
+    border: solid white 2px;
+    box-shadow: 0 0 20px white;
+}
+
+h1 {
+    font-family: var(--font-name);
+    font-weight: 100;
+    font-family: 25px;
+    margin-bottom: 3px;
+}
+
+h2 {
+    font-size: 18px;
+}
+
+.dropdown {
+    margin-top: 15px;
+    position: relative;
+}
+
+.label {
+    cursor: pointer;
+    background: rgb(40, 40, 40);
+    padding: 0.8rem 1rem;
+    width: 100%;
+    display: block;
+    box-sizing: border-box;
+    transition: all 0.3s;
+}
+
+ul {
+    list-style: none;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 0;
+}
+
+.items a {
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    transition: all 0.2s;
+}
+
+.items a:hover {
+    border-left: 5px solid;
+    background: rgb(37, 37, 37);
+}
+
+.fa-brands, 
+.fa-solid {
+    margin-right: 10px;
+}
+
+.items {
+    background: rgb(52, 52, 52);
+    opacity: 0;
+    visibility: hidden;
+    min-width: 100%;
+    height: 0;
+    position: absolute;
+    top: 48px;
+    transform-origin: top;
+    transform: scaleY(0);
+    transition: transform 0.3s;
+}
+
+.items::before {
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background: rgb(52, 52, 52);
+    transform: rotate(45deg);
+    top: -7px;
+    left: 20px;
+    z-index: -1;
+}
+
+.dropdown:hover > .items {
+    opacity: 1;
+    visibility: visible;
+    height: unset;
+    transform: scaleY(1);
+}
+
+.dropdown:hover > .label {
+    background: rgb(255, 115, 0);
 }
